<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyblue_2"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greyblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_profile"
            android:textSize="@dimen/font16"
            android:fontFamily="@font/retroica"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/blue" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/dimen20"
        android:src="@drawable/profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen12"
        android:fontFamily="@font/retroica"
        android:text="@string/name"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/font18"
        app:layout_constraintTop_toBottomOf="@+id/img_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/txt_job_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen6"
        android:fontFamily="@font/retroica"
        android:text="@string/job_age"
        android:textColor="@color/white"
        android:textSize="@dimen/font10"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_about_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen20"
        android:layout_marginLeft="@dimen/dimen26"
        android:layout_marginRight="@dimen/dimen26"
        app:cardCornerRadius="@dimen/dimen10"
        android:backgroundTint="@color/greyblue"
        app:layout_constraintTop_toBottomOf="@+id/txt_job_age">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen20">

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dimen10"
                android:text="@string/title_about_me"
                android:textSize="@dimen/font16"
                android:fontFamily="@font/retroica"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_about_me"
                android:textSize="@dimen/font10"
                android:fontFamily="@font/retroica"
                android:textColor="@color/white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen20"
        android:layout_marginLeft="@dimen/dimen26"
        android:layout_marginRight="@dimen/dimen26"
        app:cardCornerRadius="@dimen/dimen10"
        android:backgroundTint="@color/greyblue"
        app:layout_constraintTop_toBottomOf="@+id/card_about_me">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/dimen20"
            android:paddingStart="@dimen/dimen20"
            android:paddingEnd="@dimen/dimen20">

            <TextView
                android:id="@+id/txt_contact_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dimen10"
                android:text="@string/title_contact"
                android:textSize="@dimen/font16"
                android:fontFamily="@font/retroica"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_phone"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone_24"
                android:drawablePadding="@dimen/dimen10"
                android:text="@string/phone_number"
                android:textColor="@color/white"
                android:textAlignment="textStart"
                android:fontFamily="@font/retroica"
                android:textSize="@dimen/font12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_contact_title"/>

            <View
                android:id="@+id/view_line_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen2"
                android:background="@color/greyblue_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_phone"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_gmail"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_gmail_24"
                android:drawablePadding="@dimen/dimen10"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textAlignment="textStart"
                android:fontFamily="@font/retroica"
                android:textSize="@dimen/dimen12"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_line_phone"/>

            <View
                android:id="@+id/view_line_gmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen2"
                android:background="@color/greyblue_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_gmail"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ig"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_ig_24"
                android:drawablePadding="@dimen/dimen10"
                android:text="@string/ig_account"
                android:textColor="@color/white"
                android:textAlignment="textStart"
                android:fontFamily="@font/retroica"
                android:textSize="@dimen/dimen12"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_line_gmail"/>

            <View
                android:id="@+id/view_line_ig"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen2"
                android:background="@color/greyblue_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_ig"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_maps"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_gmaps_24"
                android:drawablePadding="@dimen/dimen10"
                android:text="@string/find_me"
                android:textColor="@color/white"
                android:textAlignment="textStart"
                android:fontFamily="@font/retroica"
                android:textSize="@dimen/dimen12"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_line_ig"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen20"
        android:layout_marginLeft="@dimen/dimen26"
        android:layout_marginRight="@dimen/dimen26"
        app:cardCornerRadius="@dimen/dimen10"
        android:backgroundTint="@color/greyblue"
        app:layout_constraintTop_toBottomOf="@+id/card_contact">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen18"
            android:text="@string/title_apps"
            android:textSize="@dimen/font14"
            android:fontFamily="@font/retroica"
            android:textStyle="bold"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>